# MedArchive-Rag

./: .env.example  .flake8  .gitignore  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE_4_5_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
data/test_documents/: README.md  diabetes_summary.md  hypertension_guideline.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md
docs/modules/: README.md  citations.md  conversation.md  frontend.md  ingestion.md  llm.md  retrieval.md
infra/docker/: Dockerfile.api  Dockerfile.ingestion
scripts/: create_sample_pdfs.py  evaluate_rag.py
services/api/src/: __init__.py  main.py
services/api/src/citations/: __init__.py  extractor.py
services/api/src/conversation/: __init__.py  session_manager.py
services/api/src/evaluation/: __init__.py  ragas_evaluator.py
services/api/src/llm/: __init__.py
services/api/src/observability/: __init__.py  phoenix_tracer.py
services/api/src/retrieval/: __init__.py  reranker.py  retriever.py
services/api/src/routes/: query.py
services/ingestion/src/: main.py
services/ingestion/src/chunking/: __init__.py  semantic_chunker.py
services/ingestion/src/embedding/: __init__.py  embedder.py
services/ingestion/src/indexing/: __init__.py  qdrant_indexer.py
services/ingestion/src/parsers/: __init__.py  pdf_parser.py
services/ingestion/src/sync/: __init__.py  file_tracker.py
shared/: __init__.py
shared/models/: __init__.py  document.py
shared/utils/: __init__.py  config.py  logging.py
static/: index.html
tests/: conftest.py
tests/evaluation/: test_queries.json
tests/integration/: test_api_endpoints.py  test_api_health.py  test_evaluation_flow.py  test_ingestion_pipeline.py
tests/unit/: test_chunker.py  test_citation_extractor.py  test_config.py  test_embedder.py  test_file_tracker.py  test_models.py  test_pdf_parser.py  test_phoenix_tracer.py  test_qdrant_indexer.py  test_ragas_evaluator.py  test_reranker.py  test_retriever.py
