[tool.poetry]
name = "medarchive-rag"
version = "0.1.0"
description = "Enterprise RAG system for clinical decision support with zero-hallucination guarantees"
authors = ["MedArchive Team"]
readme = "README.md"
packages = [
    { include = "api", from = "services/api/src" },
    { include = "ingestion", from = "services/ingestion/src" },
    { include = "shared" }
]

[tool.poetry.dependencies]
python = "^3.11"
# Core API Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# Vector Database & Search
qdrant-client = "^1.7.3"
sentence-transformers = "^2.3.1"

# LLM & Parsing
groq = "^0.4.2"
llama-parse = "^0.3.4"

# Document Processing
pypdf = "^4.0.1"
python-multipart = "^0.0.6"

# Utilities
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
tenacity = "^8.2.3"
rich = "^13.7.0"

# Evaluation & Observability (Phase 5)
ragas = "^0.1.0"
arize-phoenix = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.26.0"
faker = "^22.6.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=services",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "requires_api_keys: Tests that require external API keys",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["services", "shared"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
